# OpenCV-Examples

./: .gitmodules  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
OpenCv-Cpp/: CMakeLists.txt  README.md
OpenCv-Cpp/ColorSpaceConversion/: ColorSpaceConversion.cpp
OpenCv-Cpp/DrawingBasics/: DrawingBasics.cpp
OpenCv-Cpp/DynamicFeatures/: DynamicFeatures.cpp
OpenCv-Cpp/FileOperations/: CMakeLists.txt  FileOperations.cpp
OpenCv-Cpp/MouseOperations/: MouseOperations.cpp
OpenCv-Cpp/RotationOperations/: RotationOperations.cpp
OpenCv-Cpp/ScalingOperations/: CMakeLists.txt  ScalingOperations.cpp  cmake.sh
OpenCv-Cpp/StaticFeatures/: StaticFeatures.cpp
OpenCv-Cpp/VideoGrabber/: VideoGrabber.cpp
OpenCv-Python/: README.md  requirements.txt
OpenCv-Python/ColorSpaceConversion/: ColorSpaceConversion.py
OpenCv-Python/DrawingBasics/: DrawingBasics.py
OpenCv-Python/DynamicFeatures/: DynamicFeatures.py
OpenCv-Python/FileOperations/: FileOperations.py
OpenCv-Python/MouseOperations/: MouseOperations.py
OpenCv-Python/RotationOperations/: RotationOperations.py
OpenCv-Python/ScalingOperations/: ScalingOperations.py
OpenCv-Python/StaticFeatures/: StaticFeatures.py
OpenCv-Python/VideoGrabber/: VideoGrabber.py
data/: README.md
